# adk-tutorial

./: .gitignore  README.md  docker-compose.yaml  format_eval_json.py  main.py  output.txt  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
agents/bigquery/: .env.example  agent.py  bigquery_agent_eval_set.evalset.json
agents/bigquery/config/: __init__.py  bigquery_data_config.py  nl2sql.py  nl2sql_model.py
agents/bigquery/data/: products.csv
agents/bigquery/tools/: __init__.py  nl2sql.py
agents/code_executer/: agent.py
agents/custom_story_generator/: __init__.py  run_custom_agent.py  story_flow_agent  story_flow_agent.py  sub_agents.py
agents/farewell_agent/: agent.py
agents/farewell_agent/tools/: __init__.py
agents/greeting_agent/: agent.py
agents/loop_workflow_document_improvement/: agent.py
agents/my_agent/: agent.py  my_agent_eval_set.evalset.json
agents/parallel_workflow_web_search/: agent.py
agents/sequential_workflow_code_builder/: agent.py
app/: .env.example  main.py  requirements.txt
app/eval/: test_eval.py
app/google_search_agent/: test_eval_set.evalset.json
app/static/: index.html
docs/: adk-tests.md  trouble_shooting_adk_web_module_not_found_error.md  trouble_shooting_eval_not_found.md
farewell_agent/: agent.py
greeting_agent/: agent.py
greeting_agent/tools/: say_hello.py
guardrail/: __init__.py  block_keyword_guardrail.py  block_paris_tool_guardrail.py
my_agent/: agent.py
my_agent/tools/: __init__.py  get_weather.py
test_page/: index.html
test_page/js/: app.js
(+10 files in other folders)
